# lost-citites-bot

./: .editorconfig  Cargo.toml  Makefile  README.md  index.html
arena/: Cargo.toml
arena/src/: main.rs
assets/: index-945ac89b.css  index-dd26a56a.js  lost_cities_game_lib_bg-2be32a4a.wasm
bots/v1/: Cargo.toml
bots/v1/src/: bot.rs
game_lib/: Cargo.toml
game_lib/src/: config.rs  game.rs  game_manager.rs  lib.rs
game_lib/src/common/: errors.rs  mod.rs  shuffler.rs  types.rs
game_lib/src/entities/: campaign.rs  card.rs  game_info.rs  mod.rs  playground.rs
game_lib/src/tests/: mod.rs  test_make_move.rs
game_lib/src/tests/fixtures/: mod.rs
game_lib/src/wasm/: game.rs  types.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
webapp/: package.json  pnpm-lock.yaml  vite.config.ts
webapp/src/: App.svelte  common.ts  index.css  main.ts
webapp/src/components/: Campaign.svelte  CampaignRoute.svelte  Card.svelte  FreeCardsDeck.svelte  MainDeck.svelte  PlayersHand.svelte  Playground.svelte
webapp/src/entities/: game.ts  move_process.ts
webapp/src/stores/: game.ts  move_process.ts
