[package]
name = "lost_cities_game_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.40"
itertools = "0.10.5"
rand = "0.8.5"

wasm-bindgen = { version = "0.2.88", optional = true }
js-sys = { version = "0.3.64", optional = true }
serde = { version = "1.0.164", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true}

[features]
wasm = ["wasm-bindgen", "js-sys", "serde", "serde-wasm-bindgen", "getrandom"]
